# sqlfluff-pyspark

./: .gitignore  INSTALLATION.md  LICENSE  README.md  USAGE.md  pyproject.toml  setup.py
sqlfluff_pyspark_templater/: __init__.py  cli.py  sqlfluff_wrapper.py  templater.py
src/sqlfluff_pyspark/: __init__.py  ast_extract.py  cli.py  core.py
tests/: __init__.py  conftest.py  test_ast_extract.py  test_cli.py  test_core.py  test_integration.py  test_templater.py
tests/fixtures/: __init__.py
tests/fixtures/expected_outputs/: __init__.py  code_on_closing_line.py  code_on_opening_line.py  complex_method_chaining.py  conditional_statements.py  mixed_fstring_and_regular.py  multiline_with_code_on_lines.py  multiple_sql_same_line.py  multiple_sql_with_code_between.py  multiple_statements.py  sql_in_function.py  sql_with_method_call.py  triple_quotes_with_code.py
tests/fixtures/test_cases/: __init__.py  code_on_closing_line.py  code_on_opening_line.py  complex_method_chaining.py  conditional_statements.py  mixed_fstring_and_regular.py  multiline_with_code_on_lines.py  multiple_sql_same_line.py  multiple_sql_with_code_between.py  multiple_statements.py  sql_in_function.py  sql_with_method_call.py  triple_quotes_with_code.py
